@@ -117,17 +117,9 @@ class DistributionTests(unittest.TestCase):
     def test_parse_Description_multiline(self):
         dist = self._makeOne()
         dist.parse('Description: This package enables integration with\n'
-                   ' foo servers.')
+                   '        foo servers.')
         self.assertEqual(dist.description,
-                         'This package enables integration with '
-                         'foo servers.')
-
-    def test_parse_Description_multiline_extra_leading_ws(self):
-        dist = self._makeOne()
-        dist.parse('Description: This package enables integration with\n'
-                   '       foo servers.')
-        self.assertEqual(dist.description,
-                         'This package enables integration with '
+                         'This package enables integration with\n'
                          'foo servers.')
 
     def test_parse_Keywords(self):
